完成接口详情

--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,4 @@ VITE_APP_FILE_UPLOAD_URL=http://localhost:8080/file/upload #文件上传地址
 VITE_APP_BASE_API_DEV=http://localhost:8080
 VITE_APP_BASE_URL_DEV=http://localhost:8080
 # The title of your application (string)
-VITE_GLOB_APP_TITLE="antdv-pro"
+VITE_GLOB_APP_TITLE="API聚合"
