--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_APP_BASE_API=http://localhost:8080
-VITE_APP_BASE_URL=https://api.antdv-pro.com
+VITE_APP_BASE_API=http://43.136.38.19:5758
+VITE_APP_BASE_URL=http://43.136.38.19:5757
 # The title of your application (string)
-VITE_GLOB_APP_TITLE="antdv-pro"
+VITE_GLOB_APP_TITLE="API聚合平台"
