--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "jsx": "preserve",
     "jsxImportSource": "vue",
+    "allowJs": true,
 
     /* Linting */
     "strict": true,
