--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.1",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-monaco-editor": "^0.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
