完成自定义接口实际地址和网关映射

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 VITE_APP_BASE_API=http://43.136.38.19:5758
 VITE_APP_BASE_URL=http://43.136.38.19:5757
+VITE_APP_API_GATEWAY_URL=http://43.136.38.19:5756 #api网关地址
 # The title of your application (string)
 VITE_GLOB_APP_TITLE="API聚合平台"
