--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_APP_BASE=/
 VITE_APP_BASE_API=/
 VITE_APP_LOAD_ROUTE_WAY=FRONTEND #菜单加载方式，FRONTEND:前端加载，BACKEND:后端加载
 VITE_APP_FILE_UPLOAD_URL=http://43.136.38.19:5758/file/upload #文件上传地址
+VITE_APP_API_GATEWAY_URL=http://43.136.38.19:5756 #api网关地址
