--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,6 @@ VITE_APP_BASE_API=http://localhost:5758
 VITE_APP_BASE_URL=http://localhost:5758
 VITE_APP_LOAD_ROUTE_WAY=FRONTEND #菜单加载方式，FRONTEND:前端加载，BACKEND:后端加载
 VITE_APP_FILE_UPLOAD_URL=http://localhost:5758/file/upload #文件上传地址
+VITE_APP_API_GATEWAY_URL=http://localhost:5756 #api网关地址
 # The title of your application (string)
 VITE_GLOB_APP_TITLE="API聚合"
